# support-system-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  client.py  ticket.py
app/controllers/: client.py  ticket.py
app/core/: config.py  database.py  security.py
app/models/: base.py  client.py  ticket.py
app/routers/: auth.py  client.py  ticket.py
app/schemas/: client.py  ticket.py
tests/: conftest.py  test_auth.py  test_clients.py  test_tickets.py
