[project]
name = "support-system-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "python-dotenv",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]"
]

[tool.fastapi]
app = "app.main:app"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
